Fixed white border to the right on mobile and some style changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,24 +54,47 @@ body {
   &__btn {
     background-color: #8ACFE5;
   border: none;
+  border-radius: 2px;
   padding: 10px 40px;
-  min-width: 10em;
+  min-width: 160px;
   font-weight: 700;
   font-size: 1.2em;
   }
 
   &__link {
-    color: #8ACFE5;
+    color: #36769D;
     font-weight: 700;
+    font-size: 0.8em;
     padding: 1em;
   }
 }
 
 .quotes {
 
-  &__quoteImg {
-    max-width: 100vw;
-    margin: 20px 10px;
+display: flex;
+margin: 40px 10px;
+margin-bottom: 60px;
+
+  img {
+    width: 75px;
+    height: 75px;
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+  }
+
+  &__quote {
+    padding-left: 10px;
+    font-style: italic;
+    margin: 0;
+  }
+
+  &__below {
+    margin: 10px 0 0 10px;
+    font-size: 0.8em;
   }
 }
 
@@ -85,7 +108,7 @@ body {
 
   display: flex;
   justify-content: flex-start;
-  margin: 10px 0 10px 20px;
+  padding: 0 40px;
   gap: 20px;
   overflow-x: scroll;
 
@@ -129,7 +152,7 @@ body {
     margin: 15px 10px;
     width: 145px;
     height: 35px;
-    border-radius: 5px;
+    border-radius: 2px;
     background-color: #E3170A;
     border: none;
     color: white;
@@ -144,23 +167,28 @@ body {
   flex-direction: column;
   padding: 2em;
   row-gap: 1em;
+  margin: 0;
 }
 
 .story {
   width: 100%;
   height: 250px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin: 0;
   padding-bottom: 30px;
   background-color: #011827;
 
+  &__box {
+    padding: 20px 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
   p {
     color: white;
     text-align: center;
-    padding: 20px 10px;
+    padding-bottom: 20px;
   }
 
   &__btn {
@@ -169,6 +197,7 @@ body {
     background-color: transparent;
     color: #8ACFE5;
     border: 2px solid #8ACFE5;
+    border-radius: 2px;
   }
 }
 
@@ -180,7 +209,7 @@ body {
   }
 
   &__box {
-    padding: 10px 10px 30px 10px;
+    padding: 20px 20px;
   }
 
   &__btn {
@@ -202,7 +231,7 @@ body {
    }
 
    &__box {
-    padding: 10px 10px 30px 10px;
+    padding: 20px 20px;
    }
 }
 
@@ -213,7 +242,12 @@ body {
   color: white;
   max-height: 550px;
   width: 100%;
-  padding: 20px 10px;
+  padding: 20px 0px;
+  margin: auto;
+
+  &__box {
+    padding: 10px 20px;
+  }
 
   h3 {
     font-size: 1em;
